# cstring

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cstring.c  cstring.h
test/: make-tests.sh  tests.c
